# textEncryption

./: .gitignore
XOR/: CMakeLists.txt
